--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <h3 class="section-subheading text-muted">Chair, Department of Anthropology
                         Michigan State University
                         </h3>
+                    <h3 class="section-subheading text-muted">2/23/2021</h3>
 
                     <p>
                         I am writing to express my interest in the summer positions the Department of Anthropology is offering. After reviewing the course offer, I realized I am very well suited for assuming a leading role with ANP 330 and ANP 201 classes. As well, I have the proven capacity to carry an assistant position with the ANP 200 class.
